--- a/style.css
+++ b/style.css
@@ -736,3 +736,108 @@ a {
     transform: scale(1.15);
   }
 }
+
+
+
+/* -------------------------------- */
+/* DIN_PLAN-SHOWS.HTML               */
+/* -------------------------------- */
+
+.show {
+  display: flex;
+  align-items: center;
+  gap: 12px;
+  background: white;
+  border-radius: 8px;
+  padding: 8px;
+  width: 299px;
+  height: 64px;
+  margin: auto;
+  position: relative;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+}
+
+.show__image-container {
+  position: relative;
+  width: 89px;
+  height: 89px;
+  flex-shrink: 0;
+}
+
+.show__image {
+  position: relative;
+  width: 89px;
+  height: auto;
+  border-radius: 50%;
+  object-fit: cover;
+  left: 20%;
+}
+
+.show__flag {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 29px;
+  height: 29px;
+  border-radius: 50%;
+  border: 2px solid white;
+  object-fit: cover;
+}
+
+.show__content {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  width: 100%;
+  height: 55px;
+  gap: 4px;
+}
+
+.show__text-group {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+  width: 149px;
+}
+
+.show__title {
+  font-family: 'Rubrik', sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+  margin: 0;
+}
+
+.show__toggle {
+  font-family: 'Rubrik', sans-serif;
+  font-weight: 300;
+  font-size: 14px;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  color: black;
+}
+
+.show__arrow {
+  font-size: 16px;
+}
+
+.show__time {
+  font-family: 'Rubrik', sans-serif;
+  font-weight: 700;
+  font-size: 18px;
+  color: var(--color-secondary);
+  margin: 0;
+  padding-top: 4px;
+}
+
+.show__checkbox {
+  width: 22px;
+  height: 22px;
+  background: #D9D9D9;
+  border-radius: 6px;
+  border: none;
+  box-shadow: inset 0 2px 4px rgba(0,0,0,0.25);
+  margin-top: 2px;
+  cursor: pointer;
+}
