--- a/style.css
+++ b/style.css
@@ -750,8 +750,6 @@ a {
   background: white;
   border-radius: 8px;
   padding: 8px;
-  width: 299px;
-  height: 64px;
   margin: auto;
   position: relative;
   box-shadow: 0 2px 4px rgba(0,0,0,0.1);
@@ -762,6 +760,7 @@ a {
   width: 89px;
   height: 89px;
   flex-shrink: 0;
+  transform: translateX(-0%);
 }
 
 .show__image {
@@ -790,6 +789,7 @@ a {
   width: 100%;
   height: 55px;
   gap: 4px;
+  transform: translateX(-10%);
 }
 
 .show__text-group {
