--- a/style.css
+++ b/style.css
@@ -197,13 +197,17 @@ a {
 
 .shows__item {
   flex: 0 0 80px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
   text-align: center;
 }
 
 .shows__title {
   font-size: 16px;
-  font-weight: 600;
-  margin: 0;
+  font-weight: 700;
+margin: 0%;
 }
 
 .shows__time {
