--- a/style.css
+++ b/style.css
@@ -3,37 +3,43 @@
 /* -------------------------------- */
 @font-face {
   font-family: 'Rubrik';
-  src: url('font/Rubrik-Regular.woff2') format('woff2');
+  src: url('font/Rubrik-Regular.woff') format('woff');
 }
 @font-face {
   font-family: 'Rubrik';
-  src: url('font/Rubrik\\ Regular.otf') format('truetype');
+  src: url('font/rubrik_regular-webfont.woff') format('woff');
   font-weight: 400;
+  font-style: normal;
 }
 @font-face {
   font-family: 'Rubrik';
-  src: url('font/Rubrik\\ Bold.otf') format('truetype');
+  src: url('font/rubrik_bold-webfont.woff') format('woff');
   font-weight: 700;
+  font-style: normal;
 }
 @font-face {
   font-family: 'Rubrik';
-  src: url('font/Rubrik\\ ExtraLight.otf') format('truetype');
+  src: url('font/rubrik_extralight-webfont.woff') format('woff');
   font-weight: 200;
+  font-style: normal;
 }
 @font-face {
   font-family: 'Rubrik';
-  src: url('font/Rubrik\\ Light.otf.otf') format('truetype');
+  src: url('font/rubrik_light-webfont.woff') format('woff');
   font-weight: 300;
+  font-style: normal;
 }
 @font-face {
   font-family: 'Rubrik';
-  src: url('font/Rubrik\\ Medium.otf') format('truetype');
+  src: url('font/rubrik_medium-webfont.woff') format('woff');
   font-weight: 500;
+  font-style: normal;
 }
 @font-face {
   font-family: 'Rubrik';
-  src: url('font/Rubrik\\ SemiBold.otf') format('truetype');
+  src: url('font/rubrik_semibold-webfont.woff') format('woff');
   font-weight: 600;
+  font-style: normal;
 }
 
 :root {
